--- a/urlshortener/amplify/backend/function/urlshortener/src/package.json
+++ b/urlshortener/amplify/backend/function/urlshortener/src/package.json
@@ -7,6 +7,7 @@
     "aws-serverless-express": "^3.3.5",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "express-fileupload": "^1.2.1",
     "lodash": "^4.17.21",
     "uuid": "^8.3.2"
   },
